# SCAFET

./: pyproject.toml
src/scafet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
